# Translation-Radar

./: .gitignore  README.md  pyproject.toml
data/rag/: README.md  feed_manifest.json  normalized_records.json  seed_index.json
docs/: ARCHITECTURE.md  SOURCE_INVENTORY.md
src/translation_radar_api/: __init__.py  config.py  main.py  models.py
src/translation_radar_api/routes/: alerts.py  health.py  rag.py  sources.py
src/translation_radar_api/services/: __init__.py  disclosure_gap.py  rag_answer.py  rag_harvest.py  rag_index.py  rag_ingest.py  rag_search.py  scout_signal.py
src/translation_radar_api/sources/: __init__.py  base.py  http_probe.py  inteum_rss.py  registry.py
tech_scout_platform/: .env.example  README.md
tech_scout_platform/src/: App.tsx  index.css
tech_scout_platform/src/api/: rag.ts
tech_scout_platform/src/assets/: images.ts
tech_scout_platform/src/components/: AgentStatusPanel.tsx  Charts.tsx  EvidenceCards.tsx  Layout.tsx
tech_scout_platform/src/data/: index.ts
tech_scout_platform/src/lib/: index.ts
tech_scout_platform/src/pages/: AgentRuns.tsx  Catalogs.tsx  Clusters.tsx  CoverageMap.tsx  Search.tsx
tests/: test_disclosure_gap.py  test_inteum_rss.py  test_rag.py  test_rag_harvest.py  test_source_registry.py
